# noir-single

./: .gitignore  Cargo.toml  Nargo.toml  Prover.toml  README.md  bun.lockb  package.json  prep.ts  set-env.sh  tester.ts
proofs/: hello_world.proof
src/: main.nr  main.rs
