[package]
name = "noir-single"
version = "0.1.0"
edition = "2021"
default-run = "noir-single"

[dependencies]
# noir_rs = { git = "https://github.com/zkpassport/noir_rs.git", branch = "v0.36.0", package = "noir_rs" }
# noir_rs = { git = "https://github.com/zkpassport/noir_rs.git", branch = "v1.0.0-beta.0", features = [
#     "barretenberg",
# ] }
# noir_rs = { path = "https://github.com/zkpassport/noir_rs.git", tag = "v1.0.0-beta.3-1", features = [
#     "barretenberg",
# ] }
noir_rs = { path = "../noir_rs2", features = [
    "barretenberg",
    "android-compat",
] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.125"
hex = "0.4"

[[bin]]
name = "srsdown"
path = "src/bin/srsdown.rs"
